system-ui (1.0.23~1) unstable; urgency=low

  * [UNRELEASED]

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 11 Aug 2011 17:17:57 +0300

system-ui (1.0.22-1) unstable; urgency=low

  * Fixes: NB#273889 - [TASK] Operator name should be replaced with "Emergency calls only" when in limited service state and there is a network available

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 11 Aug 2011 17:17:31 +0300

system-ui (1.0.21-1) unstable; urgency=high

  * Fixes: NB#275357 - [TASK] Low memory notification dialog

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 10 Aug 2011 13:29:35 +0300

system-ui (1.0.20-1) unstable; urgency=high

  * Fixes: NB#275357 - [TASK] Low memory notification dialog

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 09 Aug 2011 12:59:59 +0300

system-ui (1.0.19-1) unstable; urgency=high

  * Fixes: NB#275357 - [TASK] Low memory notification dialog

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 08 Aug 2011 20:03:22 +0300

system-ui (1.0.18-1) unstable; urgency=low

  * Fixes: NB#275357 - [TASK] Low memory notification dialog

 -- Artem Egorkine <ext-artem.egorkine@nokia.com>  Thu, 04 Aug 2011 12:00:15 +0300

system-ui (1.0.17-1) unstable; urgency=low

  * Fixes: NB#271768 - Battery low notifications sound/beeps not heard when on call

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 11 Jul 2011 16:48:55 +0300

system-ui (1.0.16-1) unstable; urgency=low

  * Fixes: NB#270432 - (Dis)connecting the USB cable or getting a battery notification may remove other notifications

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 07 Jul 2011 16:42:37 +0300

system-ui (1.0.15-1) unstable; urgency=high

  * Fixes: NB#268139 - Unable to lock the device and time is not displayed in lock mode

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 23 Jun 2011 14:20:10 +0300

system-ui (1.0.14-1) unstable; urgency=low

  * Fixes: NB#265053 - The screen flickers when the touch screen lock transitions to the standby screen
