@@ -1,2 +1,0 @@
-class=system
-iconId=icon-m-notification-low-memory
