@@ -43,8 +43,7 @@ HEADERS +=                              \
     applicationcontext.h                \
     x11wrapper.h                        \
     xeventlistener.h                    \
-    diskspacenotifier.h                 \
-    lowmemorynotifier.h
+    diskspacenotifier.h
 
 SOURCES +=                              \
     main.cpp                            \
@@ -58,8 +57,7 @@ SOURCES +=                              \
     contextframeworkcontext.cpp         \
     x11wrapper.cpp                      \
     xeventlistener.cpp                  \
-    diskspacenotifier.cpp               \
-    lowmemorynotifier.cpp
+    diskspacenotifier.cpp
 
 include(statusindicatormenu/statusindicatormenu.pri)
 include(statusarea/statusarea.pri)
@@ -86,14 +84,10 @@ contains(DEFINES, HAVE_LIBNGF) {
 PKGCONFIG += \
     dbus-1 \
     dbus-glib-1 \
-    xcomposite \
-    libmemnotifyqt
+    xcomposite
 
 dbus_policy.files += systemui.conf
 dbus_policy.path = $$(DEBIAN_DESTDIR)/etc/dbus-1/system.d
-
-memnotify_config.files += sysuid.mn
-memnotify_config.path = $$(DEBIAN_DESTDIR)/etc/memnotify
 
 headers.path = /usr/include/system-ui
 headers.files += \
@@ -102,5 +96,4 @@ headers.files += \
 
 INSTALLS += target \
             dbus_policy \
-            memnotify_config \
             headers
